<resources>
    <string name="app_name">ניימבי</string>
    <string name="user_name">משתמש</string>
    <string name="menu_sex_settings">החלף מין</string>
    <string name="menu_change_user_settings">החלף משתמש</string>
    <string name="menu_family_settings">הגדרות משפחה</string>
    <string name="help">עזרה</string>
    <string name="loved">אהובים</string>
    <string name="unloved">לא אהובים</string>
    <string name="untagged">לא מתוייגים</string>
    <string name="all_names">כל השמות</string>
    <string name="add_names">הוספת שמות</string>
    <string name="maybe">אפשר לשקול</string>
    <string name="triage_tab">מיון</string>
    <string name="matches">התאמות</string>
    <string name="mark_loved_dialog_title">סימון שם כאהוב</string>
    <string name="mark_loved_dialog_body">האם להעביר את השם מרשימת הלא אהובים לרשימת האהובים?</string>
    <string name="mark_unloved_dialog_title">סימון שם כלא אהוב</string>
    <string name="mark_unloved_dialog_body">האם להעביר את השם מרשימת האהובים לרשימת הלא אהובים?</string>
    <string name="mark_approve_button">אישור</string>
    <string name="cancel_button">ביטול</string>
    <string name="add_dialog_title">הוספת שמות</string>
    <string name="add_dialog_body">הקלידו פה שמות מופרדים בשורה חדשה. השמות יועברו אוטומטית לרשימת השמות האהובים</string>
    <string name="error_dialog_title">שגיאה</string>
    <string name="error_set_usernames_dialog_body">בחרתם בשמות זהים למשתמשים השונים או שאחד משמות המשתמשים ריק. אנא הזינו שמות משתמש שונים בכל שפה שתבחרו</string>
    <string name="add_approve_button">הוספה</string>
    <string name="choose_female">בת</string>
    <string name="choose_male">בן</string>
    <string name="name_was_added">השם נוסף בהצלחה:</string>

    <string name="default_member_name">השם שלך</string>
    <string name="default_family_name">ישראלי</string>

    <string name="choose_sex_settings">למי אתם מצפים?</string>
    <string name="edit_family_members_settings">איך קוראים לכם?</string>
    <string name="skip">דלגו על ההסבר</string>
    <string name="welcome_text">ברוכים הבאים!\n\nאתם בטח מתרגשים, זה לא פשוט לבחור שם לתינוק שלכם.\n\nהאפליקציה הזו נבנתה במיוחד עבורכם, כדי לעזור לכם לבחור את השם הטוב ביותר.</string>
    <string name="help_text">האפליקציה הזו קצת שונה מהאפליקציות האחרות מהתחום. \n\nכאן, כל אחד מכם יסמן אילו שמות הוא אוהב.\n\nהאפליקציה תמצא עבורכם את השמות ששניכם אוהבים!</string>
    <string name="initiation_help_text">קודם כל, תצטרכו לבחור אם אתם רוצים לסמן שמות של בנים או של בנות.\n\n לאחר מכן, אתם יכולים (אבל לא חייבים) לשנות את שמות המשתמשים לשמות שלכם.\n\nכל אחד מכם יתייג תחת שם המשתמש שהוא בחר ותוכלו להחליף ביניכם מתי שתרצו.</string>
    <string name="nevigation_help_text">אחרי שתבחרו את שמות המשתמשים, תוכלו להתחיל לתייג!\n\nשימו לב מה שם המשתמש שיצויין למעלה. כדי להחליף ביניכם, פשוט לחצו על שם המשתמש וחכו שהשם יתחלף.\n\nבמסך תוכלו לראות כמה כרטיסיות: מיון, אהובים, לא אהובים והתאמות.</string>
    <string name="nevigation_help_text2">מיון : כאן תוכלו לסמן אילו שמות אתם אוהבים. לחצו על ה(לב +) כדי לאהוב, ועל ה(לב -) כדי לא לאהוב. לחלופין, גררו את השם לכיוון ה(לב) הרצוי.\n\nלחצו על כפתור ה-(+) כדי להוסיף שמות שאתם כבר יודעים שאתם אוהבים!</string>
    <string name="nevigation_help_text3">אהובים : כאן נשמרים השמות שאהבתם. לחצו על העפרון כדי להעביר לרשימת הלא אהובים. \n\nלא אהובים : כאן נשמרים השמות שלא אהבתם. לחצו על העפרון כדי להעביר לרשימת השמות האהובים.\n\nהתאמות : כאן האפליקציה תשמור שמות ששניכם אהבתם. כשתמצא התאמה, תשמעו צליל מיוחד, ושם הכרטיסיה יהפוך לאייקון של לב ורוד.</string>
    <string name="drawer_open">לתפריט</string>
    <string name="drawer_close">סגור תפריט</string>
    <string name="lists">רשימות</string>
    <string name="settings">הגדרות</string>
    <string name="search">חיפוש</string>
    <string name="name">שם</string>
    <string name="tag">תיוג:</string>
    <string name="add_to">הוספה ל:</string>
    <string name="expecting">מצפים ל:</string>
    <string name="all">כולם</string>
    <string name="names">שמות</string>
    <string name="end_of_names">סיימת לתייג הכל!</string>
    <string name="family">משפחת</string>
    <string name="remove">הסרה</string>
    <string name="remove_confirm_body">אישור הסרה</string>
    <string name="family_name">שם משפחה</string>
    <string name="change_family_name_body">הזנת שם המשפחה:</string>
    <string name="error_set_name">השם שהוזן אינו תקין, יש להשתמש באותיות עבריות וברווחים בלבד.</string>
    <string name="error_set_email">כתובת המייל שהוזנה אינה חוקית</string>
    <string name="email">אימייל</string>
    <string name="add_family_member_title">הוספת בן משפחה</string>
    <string name="switch_user">החלפת משתמש</string>
    <string name="match_massage">יש לנו התאמה! </string>
    <string name="match_notif_body">יש לנו התאמה! אתם אוהבים את אותו השם</string>
    <string name="nameby_notif_title">ניימבי</string>
    <string name="cannot_delete_your_member">לא ניתן למחוק מהמשפחה את המשתמש שלך, רק משתמשים אחרים ניתנים למחיקה</string>


</resources>

