<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.agiv.names2.MainActivity">
    <item
        android:id="@+id/sex_settings"
        android:orderInCategory="100"
        android:title="@string/menu_sex_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/family_settings"
        android:orderInCategory="100"
        android:title="@string/menu_family_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/change_user"
        android:orderInCategory="100"
        android:title="@string/menu_change_user_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />
</menu>
