<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.agiv.nameby.MainActivity"
    tools:showIn="@layout/activity_main">

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:background="@drawable/rect"
            android:gravity="center" />

        <RelativeLayout
            android:id="@+id/tag"
            android:layout_below="@id/name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tag_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_alignParentRight="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="right"
                android:text="@string/add_to"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tag_choices_rel_layout"
                android:background="@drawable/rect"
                android:layout_toLeftOf="@id/tag_title">

                <Spinner
                    android:id="@+id/tag_choices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:drawSelectorOnTop="true"
                    android:layout_gravity="right"

                    android:textAlignment="gravity"
                    android:spinnerMode="dropdown"/>
            </RelativeLayout>


        </RelativeLayout>

        <RadioGroup
            android:id="@+id/gender_radio"
            android:layout_below="@id/tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:buttonTint="@color/colorAccent"
                android:text="@string/choose_male"/>
            <RadioButton android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:layout_height="wrap_content"
                android:text="@string/choose_female"/>
        </RadioGroup>

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_approve_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            />

</RelativeLayout>
