<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.agiv.nameby.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#a64dff"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/choose_sex_settings"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:paddingTop="@dimen/fab_margin"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/fab_margin"
            android:background="@null"
            android:text="@string/choose_sex_settings" />

        <LinearLayout
            android:id="@+id/choose_sex_buttons"
            android:layout_below="@+id/choose_sex_settings"
            android:layout_width="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/fab_margin"
            android:orientation="horizontal">

            <!--android:layout_marginRight="10dp"-->
            <ImageButton
                android:id="@+id/choose_sex_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:src="@drawable/girl"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/choose_sex_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/boy"
                android:background="@null"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/choose_sex_help_text"
            android:layout_below="@+id/choose_sex_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <!--android:layout_marginRight="10dp"-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:layout_marginRight="80dp"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:text="@string/choose_female"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="80dp"
                android:text="@string/choose_male"
                android:background="@null"
                android:layout_weight="1" />
        </LinearLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
